--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -32,22 +32,20 @@
 	
 	<div data-role="header" data-position="fixed">
 		<div data-role="controlgroup" data-type="horizontal">
-			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#te_homepage" class="ui-btn ui-corner-all"><img src="assets/images/te_logo.png" height="52" width="42"></a>
 			<a href="#" class="ui-btn ui-corner-all"><i class="far fa-user fa-2x"></i><br><br>PROFILE</a>
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all ui-btn-right"><i class="far fa-gem fa-2x"></i><br><br>0</a>
 		</div>
 	</div>
 	
-	<h1>HOME PAGE</h1>
-
 	<!-- Slideshow container -->
 <div class="slideshow-container" width="420" height="315" >
 
 </div><br>
 
-	<h2>Welcome to Treasure Express!</h2>
+	<h1 style="text-align:center;">Welcome to Treasure Express!</h1>
 
-	<p>Here with Treasure Express you can find what you enjoy in the cities you love as you travel!<br> 
+	<p style="text-align:center;">Here with Treasure Express you can find what you enjoy in the cities you love as you travel!<br> 
 	With Treasure Express you can redeem vouchers to your favourite landmarks. <br><br><br>
 	The more landmarks you visit the more points you receive to your favourite vouchers!</p>
 	
@@ -65,7 +63,7 @@
 			<li><a href="#te_stationmap"><i class="far fa-map fa-2x"></i><br><br>
 				<span" class="font-size-change">STATION  MAP</span></a></li>
 			<li><a href="#te_favourites"><i class="far fa-heart fa-2x"></i><br><br>
-				<span" class="font-size-change">FAVORITES</span></a></li>
+				<span" class="font-size-change">FAVOURITES</span></a></li>
 			<li><a href="#te_booking"><i class="fas fa-ticket-alt fa-2x"></i><br><br>
 				<span" class="font-size-change">BOOK  TICKETS</span></a></li>
 			<li><a href="#te_scanQR"><i class="fas fa-qrcode fa-2x"></i><br><br>
@@ -82,7 +80,7 @@
 <div data-role="page" id="te_stationmap">
 	<div data-role="header" data-position="fixed">
 		<div data-role="controlgroup" data-type="horizontal">
-			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#te_homepage" class="ui-btn ui-corner-all"><img src="assets/images/te_logo.png" height="52" width="42"></a>
 			<a href="#" class="ui-btn ui-corner-all"><i class="far fa-user fa-2x"></i><br><br>PROFILE</a>
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all ui-btn-right"><i class="far fa-gem fa-2x"></i><br><br>0</a>
 		</div>
@@ -124,7 +122,7 @@
 				<li><a href="#te_stationmap" class="ui-btn-active"><i class="far fa-map fa-2x"></i><br><br>
 					<span" class="font-size-change">STATION  MAP</span></a></li>
 				<li><a href="#te_favourites"><i class="far fa-heart fa-2x"></i><br><br>
-					<span" class="font-size-change">FAVORITES</span></a></li>
+					<span" class="font-size-change">FAVOURITES</span></a></li>
 				<li><a href="#te_booking"><i class="fas fa-ticket-alt fa-2x"></i><br><br>
 					<span" class="font-size-change">BOOK  TICKETS</span></a></li>
 				<li><a href="#te_scanQR"><i class="fas fa-qrcode fa-2x"></i><br><br>
@@ -138,7 +136,7 @@
 <div data-role="page" id="te_poi_iphone">
 	<div data-role="header" data-position="fixed">
 		<div data-role="controlgroup" data-type="horizontal">
-			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#te_homepage" class="ui-btn ui-corner-all"><img src="assets/images/te_logo.png" height="52" width="42"></a>
 			<a href="#" class="ui-btn ui-corner-all"><i class="far fa-user fa-2x"></i><br><br>PROFILE</a>
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all ui-btn-right"><i class="far fa-gem fa-2x"></i><br><br>0</a>
 		</div>
@@ -151,7 +149,7 @@
 					<li><a href="#te_stationmap" class="ui-btn-active"><i class="far fa-map fa-2x"></i><br><br>
 						<span" class="font-size-change">STATION  MAP</span></a></li>
 					<li><a href="#te_favourites"><i class="far fa-heart fa-2x"></i><br><br>
-						<span" class="font-size-change">FAVORITES</span></a></li>
+						<span" class="font-size-change">FAVOURITES</span></a></li>
 					<li><a href="#te_booking"><i class="fas fa-ticket-alt fa-2x"></i><br><br>
 						<span" class="font-size-change">BOOK  TICKETS</span></a></li>
 					<li><a href="#te_scanQR"><i class="fas fa-qrcode fa-2x"></i><br><br>
@@ -166,7 +164,7 @@
 <div data-role="page" id="te_favourites">
 	<div data-role="header" data-position="fixed">
 		<div data-role="controlgroup" data-type="horizontal">
-			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#te_homepage" class="ui-btn ui-corner-all"><img src="assets/images/te_logo.png" height="52" width="42"></a>
 			<a href="#" class="ui-btn ui-corner-all"><i class="far fa-user fa-2x"></i><br><br>PROFILE</a>
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all ui-btn-right"><i class="far fa-gem fa-2x"></i><br><br>0</a>
 		</div>
@@ -224,7 +222,7 @@ function ValidateEmail(inputText)
 				<li><a href="#te_stationmap"><i class="far fa-map fa-2x"></i><br><br>
 					<span" class="font-size-change">STATION  MAP</span></a></li>
 				<li><a href="#te_favourites" class="ui-btn-active"><i class="far fa-heart fa-2x"></i><br><br>
-					<span" class="font-size-change">FAVORITES</span></a></li>
+					<span" class="font-size-change">FAVOURITES</span></a></li>
 				<li><a href="#te_booking"><i class="fas fa-ticket-alt fa-2x"></i><br><br>
 					<span" class="font-size-change">BOOK  TICKETS</span></a></li>
 				<li><a href="#te_scanQR"><i class="fas fa-qrcode fa-2x"></i><br><br>
@@ -240,7 +238,7 @@ function ValidateEmail(inputText)
 <div data-role="page" id="te_booking">
 	<div data-role="header" data-position="fixed">
 		<div data-role="controlgroup" data-type="horizontal">
-			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#te_homepage" class="ui-btn ui-corner-all"><img src="assets/images/te_logo.png" height="52" width="42"></a>
 			<a href="#" class="ui-btn ui-corner-all"><i class="far fa-user fa-2x"></i><br><br>PROFILE</a>
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all ui-btn-right"><i class="far fa-gem fa-2x"></i><br><br>0</a>
 		</div>
@@ -354,7 +352,7 @@ function ValidateEmail(inputText)
 				<li><a href="#te_stationmap"><i class="far fa-map fa-2x"></i><br><br>
 					<span" class="font-size-change">STATION  MAP</span></a></li>
 				<li><a href="#te_favourites"><i class="far fa-heart fa-2x"></i><br><br>
-					<span" class="font-size-change">FAVORITES</span></a></li>
+					<span" class="font-size-change">FAVOURITES</span></a></li>
 				<li><a href="#te_booking" class="ui-btn-active"><i class="fas fa-ticket-alt fa-2x"></i><br><br>
 					<span" class="font-size-change">BOOK  TICKETS</span></a></li>
 				<li><a href="#te_scanQR"><i class="fas fa-qrcode fa-2x"></i><br><br>
@@ -369,7 +367,7 @@ function ValidateEmail(inputText)
 <div data-role="page" id="te_scanQR">
 	<div data-role="header" data-position="fixed">
 		<div data-role="controlgroup" data-type="horizontal">
-			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#te_homepage" class="ui-btn ui-corner-all"><img src="assets/images/te_logo.png" height="52" width="42"></a>
 			<a href="#" class="ui-btn ui-corner-all"><i class="far fa-user fa-2x"></i><br><br>PROFILE</a>
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all ui-btn-right"><i class="far fa-gem fa-2x"></i><br><br>0</a>
 		</div>
@@ -383,7 +381,7 @@ function ValidateEmail(inputText)
 				<li><a href="#te_stationmap"><i class="far fa-map fa-2x"></i><br><br>
 					<span" class="font-size-change">STATION  MAP</span></a></li>
 				<li><a href="#te_favourites"><i class="far fa-heart fa-2x"></i><br><br>
-					<span" class="font-size-change">FAVORITES</span></a></li>
+					<span" class="font-size-change">FAVOURITES</span></a></li>
 				<li><a href="#te_booking"><i class="fas fa-ticket-alt fa-2x"></i><br><br>
 					<span" class="font-size-change">BOOK  TICKETS</span></a></li>
 				<li><a href="#te_scanQR" class="ui-btn-active"><i class="fas fa-qrcode fa-2x"></i><br><br>
@@ -398,13 +396,14 @@ function ValidateEmail(inputText)
 <div data-role="page" id="te_animDiamond">
 	<div data-role="header" data-position="fixed">
 		<div data-role="controlgroup" data-type="horizontal">
-			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#te_homepage" class="ui-btn ui-corner-all"><img src="assets/images/te_logo.png" height="52" width="42"></a>
 			<a href="#" class="ui-btn ui-corner-all"><i class="far fa-user fa-2x"></i><br><br>PROFILE</a>
 			<a href="#te_animDiamond" class="ui-btn-active ui-btn ui-corner-all ui-btn-right"><i class="far fa-gem fa-2x"></i><br><br>0</a>
 		</div>
 	</div>
-	
-	<h1>DIAMOND</h1>
+
+	<H3>You have...</H3>
+	<img src="assets/images/Diamond.png" alt="diamond">
 	
 	<div data-role="footer" data-position="fixed">
 		<div data-role="navbar">
@@ -412,7 +411,7 @@ function ValidateEmail(inputText)
 				<li><a href="#te_stationmap"><i class="far fa-map fa-2x"></i><br><br>
 					<span" class="font-size-change">STATION  MAP</span></a></li>
 				<li><a href="#te_favourites"><i class="far fa-heart fa-2x"></i><br><br>
-					<span" class="font-size-change">FAVORITES</span></a></li>
+					<span" class="font-size-change">FAVOURITES</span></a></li>
 				<li><a href="#te_booking"><i class="fas fa-ticket-alt fa-2x"></i><br><br>
 					<span" class="font-size-change">BOOK  TICKETS</span></a></li>
 				<li><a href="#te_scanQR"><i class="fas fa-qrcode fa-2x"></i><br><br>
