--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -51,11 +51,12 @@
 	
 	<a href="#te_stationmap" style="background-color: #243757; border: #243757;" data-role="button">OPEN MAP</a>
 
-
-	<iframe width="560" height="315" title="YouTube video player" frameborder="0" 
-		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-		src="https://www.youtube.com/embed/v0-Y6CUl3w4">
-	</iframe>
+	<div style="text-align: center;">
+		<iframe width="360" height="215" title="YouTube video player" frameborder="0" 
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+			src="https://www.youtube.com/embed/v0-Y6CUl3w4">
+		</iframe>
+	</div>	
 
 	<div data-role="footer" data-position="fixed">
 	<div data-role="navbar">
