--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -1337,7 +1337,7 @@ function ValidateEmail(inputText)
 	<h1>SCAN QR</h1>
 	
 	<div role="main" class="ui-content">
-		<a href="ARpage_box.html" rel="external"><img src="assets/images/scan.jpg"></a>
+		<a href="ARpage_pointsreward.html" rel="external"><img src="assets/images/scan.jpg"></a>
 
 	</div>
 
