--- a/TreasureExpress/ARpage_pointsreward.html
+++ b/TreasureExpress/ARpage_pointsreward.html
@@ -8,7 +8,8 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 </head>
 
-<body style='margin : 0px; overflow: hidden;'>
+<body>
+	<div style='margin : 100pxpx; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<!-- <a-box position='0 0.5 0' material='opacity: .8;' color="red"></a-box> -->
 		<a-entity
@@ -20,6 +21,8 @@
   
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
+	</div>
+	<p> NAV BAR</p>
 </body>
 
 
