--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -1367,6 +1367,8 @@ function ValidateEmail(inputText)
 						<!-------------------LONDON DUNGEON ------------------>
 						<div id="waterloo_qr1_ipad" class="ui-body-d ui-content">
 							<h2>LONDON DUNGEON</h2>
+							<a href="scan_london_dungeon" class="ui-btn ui-corner-all">SCAN QR</a> 
+							<!--- Make code to add the points --->
 						</div>
 						
 						<!-------------------LONDON EYE ------------------>
