--- a/TreasureExpress/ARpage_Guildford_Museum.html
+++ b/TreasureExpress/ARpage_Guildford_Museum.html
@@ -12,9 +12,9 @@
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<!-- <a-box position='0 0.5 0' material='opacity: .8;' color="red"></a-box> -->
 		<a-entity
-			  geometry="primitive: plane; width: 4; height: auto" rotation="-90 0 0"
+			  geometry="primitive: plane; width: 6; height: auto" rotation="-90 0 0"
 			  material="color: blue"
-			  text="value: You have won 50pts!">
+			  text="value: You have found GUILDFORD MUSEUM! You have won 25pts!">
 		</a-entity>
   
   
