--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -1941,7 +1941,7 @@
 								<div role="main" class="ui-content">
 									<h3 class="ui-title">You have Found London Eye 25pts</h3>
 								<p>Scan QR To Collect Points </p>
-									<a href="ARpage_London_Eye.html" rel="external" class="ui-btn ui-corner-all" id="scan_qr_london_dungeon" target="_blank">SCAN QR</a> 
+									<a href="ARpage_London_Eye.html" rel="external" class="ui-btn ui-corner-all" id="scan_qr_london_eye" target="_blank">SCAN QR</a> 
 									
 		
 								</div>
