--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -1917,7 +1917,7 @@
 								<div role="main" class="ui-content">
 									<h3 class="ui-title">You have Found London Dungeon 25pts</h3>
 								<p>Scan QR To Collect Points </p>
-									<a href="ARpage_London_Dungeon.html" rel="external" class="ui-btn ui-corner-all" id="scan_qr_london_dungeon" target="_blank">SCAN QR</a> 
+									<a href="ARpage_London_Dungeon.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 		
 								</div>
 							</div>
@@ -1941,7 +1941,7 @@
 								<div role="main" class="ui-content">
 									<h3 class="ui-title">You have Found London Eye 25pts</h3>
 								<p>Scan QR To Collect Points </p>
-									<a href="ARpage_London_Eye.html" rel="external" class="ui-btn ui-corner-all" id="scan_qr_london_eye" target="_blank">SCAN QR</a> 
+									<a href="ARpage_London_Eye.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 									
 		
 								</div>
@@ -1968,7 +1968,7 @@
 								<div role="main" class="ui-content">
 									<h3 class="ui-title">You have Found Buckingham Palace 50pts</h3>
 								<p>Scan QR To Collect Points </p>
-									<a href="ARpage_Buckingham_Palace.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Buckingham_Palace.html" target="_blank">SCAN QR</a> 
+									<a href="ARpage_Buckingham_Palace.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 		
 								</div>
 							</div>
@@ -2010,7 +2010,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found Wimbledon Centre Court 25pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_Wimbledon_Centre_Court.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Wimbledon_Centre_Court.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_Wimbledon_Centre_Court.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
@@ -2040,7 +2040,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found New Wimbledon Theatre 25pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_New_Wimbledon_Theatre.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_New_Wimbledon_Theatre.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_New_Wimbledon_Theatre.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
@@ -2068,13 +2068,10 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found Buddhapadipa Temple 50pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_Buddhapadipa_Temple.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Buddhapadipa_Temple.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_Buddhapadipa_Temple.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
-
-
-
 
 								<p>The Buddhapadipa Temple is the first Thai Theravada Buddhist Temple ever built outside Asia. It is the centre of meditation, Buddhist education and Thai culture.</p>
 
@@ -2109,13 +2106,10 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found The Lightbox 25pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_The_Lightbox.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_The_Lightbox.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_The_Lightbox.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
-
-
-
 
 								<p>The Lightbox is an award-winning charitable arts and heritage organisation with a social purpose to improve the wellbeing and quality of life of its community.</p>
 							</div>
@@ -2136,13 +2130,10 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found RHS Garden 25pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_RHS_Garden.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_RHS_Garden.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_RHS_Garden.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
-
-
-
 
 								<p>RHS Garden Wisley is a garden run by the Royal Horticultural Society in the English county of Surrey, south of London. It is one of five gardens run by the society, the others being Harlow Carr, Hyde Hall, Rosemoor, and Bridgewater (which opened on 18 May 2021).Wisley is the second most visited paid entry garden in the United Kingdom after the Royal Botanic Gardens.</p>
 							</div>
@@ -2163,7 +2154,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found Mercedes_Benz_World 50pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_Mercedes_Benz_World.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Mercedes_Benz_World.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_Mercedes_Benz_World.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
@@ -2203,7 +2194,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found Guildford Castle 25pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_Guildford_Castle.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Guildford_Castle.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_Guildford_Castle.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
@@ -2231,7 +2222,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found Guildford Museum 25pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_Guildford_Museum.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Guildford_Museum.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_Guildford_Museum.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
@@ -2258,7 +2249,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found Stoke Park 50pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_Stoke_Park.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Stoke_Park.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_Stoke_Park.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
@@ -2299,7 +2290,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found Spinnaker Tower 25pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_Spinnaker_Tower.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Spinnaker_Tower.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_Spinnaker_Tower.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
@@ -2327,7 +2318,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found South Parade Pier 25pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_South_Parade_Pier.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_South_Parade_Pier.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_South_Parade_Pier.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
@@ -2356,7 +2347,7 @@
 									<div role="main" class="ui-content">
 										<h3 class="ui-title">You have Found Historic Dockyard 50pts</h3>
 									<p>Scan QR To Collect Points </p>
-										<a href="ARpage_Historic_Dockyard.html" rel="external" class="ui-btn ui-corner-all" id="ARpage_Historic_Dockyard.html" target="_blank">SCAN QR</a> 
+										<a href="ARpage_Historic_Dockyard.html" rel="external" class="ui-btn ui-corner-all" target="_blank">SCAN QR</a> 
 
 									</div>
 								</div>
