--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -210,6 +210,19 @@
 		text-align: center;
 		color: white;
 		}
+		.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 		/* Individual bars */
 		.bar-5 {width: 60%; height: 18px; background-color: #04AA6D;}
@@ -257,7 +270,7 @@
 	
 	<a href="#te_stationmap" style="background-color: #243757; border: #243757;" data-role="button">OPEN MAP</a>
 
-	<div style="text-align: center;">
+	<div class="iframe-container" style="text-align: center;">
 		<iframe width="360" height="215" title="YouTube video player" frameborder="0" 
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
 			src="https://www.youtube.com/embed/v0-Y6CUl3w4">
